<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits"
    android:background="@drawable/mountains"
    >

    <TextView
        android:id="@+id/credits_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/credits_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat_bold"/>

    <LinearLayout
        android:id="@+id/credits_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#58000000"
        app:layout_constraintBottom_toTopOf="@+id/credits_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_header"
        android:padding="20dp"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_creator"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blue1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sit2"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/credits_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/credits_copyright"
        app:layout_constraintBottom_toTopOf="@+id/open_source_licenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_info"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_bold"/>

    <Button
        android:id="@+id/open_source_licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="openThirdPartyNotices"
        android:text="@string/open_source_licenses"
        android:contentDescription="@string/open_source_licenses_content_description"
        app:layout_constraintBottom_toTopOf="@+id/credits_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_copyright" />

    <TextView
        android:id="@+id/credits_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_source_licenses"
        android:textColor="#4e4c4c"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>